--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: crud           # set this to your Amazon ECR repository name
   ECS_SERVICE: crud                 # set this to your Amazon ECS service name
   ECS_CLUSTER: crud                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: td_crud # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: td_crud.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: crud           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
